--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     <meta property="og:description"
         content="A responsive QR code component website built using HTML and CSS by the author during his third month learning frontend web development. This project was created as part of a Frontend Mentor challenge, based on a provided Figma design and style guide." />
     <meta property="og:url" content="https://qr-code-component-fm-jiro.netlify.app/" />
-    <meta property="og:image" content="https://qr-code-component-fm-jiro.netlify.app/img/site-preview_1200x630.jpg" />
+    <meta property="og:image"
+        content="https://qr-code-component-fm-jiro.netlify.app/img/site-preview-meta_1200x630.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="QR Code Component" />
     <meta name="twitter:description"
         content="Built this responsive QR code component with HTML & CSS via @frontendmentor — done during my 3rd month learning frontend dev! #FrontendDevJourney" />
-    <meta name="twitter:image" content="https://qr-code-component-fm-jiro.netlify.app/img/site-preview_1200x630.jpg" />
+    <meta name="twitter:image"
+        content="https://qr-code-component-fm-jiro.netlify.app/img/site-preview-meta_1200x630.png" />
 </head>
 
 <body>
